fix: mobile menu overflow

--- a/styles/map/asideInfo.module.scss
+++ b/styles/map/asideInfo.module.scss
@@ -182,7 +182,9 @@ $map-ninety-url: '/v1667647196/nnt_silece_thoughts_2021_zwzc6x.webp';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
+
   margin: 24px 0;
 
   font-family: 'Piazzolla';
@@ -190,6 +192,8 @@ $map-ninety-url: '/v1667647196/nnt_silece_thoughts_2021_zwzc6x.webp';
   font-weight: 500;
   font-size: 16px;
   line-height: 145%;
+
+  padding-bottom: 60px;
   p {
     margin: 0;
   }
@@ -237,9 +241,6 @@ $map-ninety-url: '/v1667647196/nnt_silece_thoughts_2021_zwzc6x.webp';
   .asideInfo__description {
     padding: 0 8px;
     margin-top: 14px;
-  }
-
-  .asideInfo__list {
-    padding-bottom: 60px;
+    padding-bottom: 120px;
   }
 }
